--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.5",
+    "@material-tailwind/react": "^2.1.9",
     "@tabler/icons-react": "^3.11.0",
     "@tanstack/react-query": "^5.51.1",
     "axios": "^1.7.2",
@@ -20,7 +22,8 @@
     "react-icons": "^5.2.1",
     "react-intersection-observer": "^9.13.0",
     "react-router-dom": "^6.25.0",
-    "tailwind-merge": "^2.4.0"
+    "tailwind-merge": "^2.4.0",
+    "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
@@ -34,7 +37,7 @@
     "eslint-plugin-react-refresh": "^0.4.7",
     "postcss": "^8.4.39",
     "tailwindcss": "^3.4.6",
-    "typescript": "^5.2.2",
+    "typescript": "^5.5.3",
     "vite": "^5.3.4"
   }
 }
